force-app/main/default/objects/DocuSignConfiguration__mdt/DocuSignConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>DocuSignConfiguration</label>
    <pluralLabel>DocuSignConfiguration</pluralLabel>
</CustomObject>