force-app/main/default/objects/DocuSignConfiguration__mdt/fields/EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplate__c</fullName>
    <label>EmailTemplate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>