force-app/main/default/objects/DocuSignConfiguration__mdt/fields/IsReviewBeforeSend__c.field-meta.xml
<CustomField>
    <fullName>IsReviewBeforeSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReviewBeforeSend</label>
    <type>Checkbox</type>
</CustomField>