force-app/main/default/objects/DocuSignConfiguration__mdt/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patent</fullName>
                <default>true</default>
                <label>Patent</label>
            </value>
            <value>
                <fullName>Invention Disclosure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>